--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,26 @@
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.10
+aiosignal==1.3.1
+anyio==3.7.1
+asgiref==3.8.1
+async-timeout==4.0.3
+attrs==24.2.0
+certifi==2024.8.30
+charset-normalizer==2.0.12
+click==8.1.7
+elasticsearch==7.17.0
+exceptiongroup==1.2.2
 fastapi==0.73.0
-uvicorn==0.15.0
-elasticsearch[async]==7.17.0
+frozenlist==1.5.0
+h11==0.14.0
+idna==3.10
+multidict==6.1.0
+propcache==0.2.0
+pydantic==1.10.19
 requests==2.27.1
+sniffio==1.3.1
+starlette==0.17.1
+typing_extensions==4.12.2
+urllib3==1.26.20
+uvicorn==0.15.0
+yarl==1.17.1
