--- a/requirements.txt
+++ b/requirements.txt
@@ -3,28 +3,43 @@ aiohttp==3.10.10
 aiosignal==1.3.1
 anyio==3.7.1
 asgiref==3.8.1
+astroid==3.3.8
 async-timeout==4.0.3
 attrs==24.2.0
 certifi==2024.8.30
+cfgv==3.4.0
 charset-normalizer==2.0.12
 click==8.1.7
-elastic-transport==8.1.2
-elasticsearch==7.10.0
-elasticsearch-async==6.2.0
+dill==0.3.9
+distlib==0.3.9
+elasticsearch==7.17.0
 exceptiongroup==1.2.2
 fastapi==0.73.0
+filelock==3.17.0
 frozenlist==1.5.0
 h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+identify==2.6.7
 idna==3.10
+isort==6.0.0
+mccabe==0.7.0
 multidict==6.1.0
+nodeenv==1.9.1
+platformdirs==4.3.6
+pre_commit==4.1.0
 propcache==0.2.0
 pydantic==1.10.19
+pylint==3.3.4
+python-dotenv==1.0.1
+PyYAML==6.0.2
 requests==2.27.1
 sniffio==1.3.1
 starlette==0.17.1
+tomli==2.2.1
+tomlkit==0.13.2
 typing_extensions==4.12.2
 urllib3==1.26.20
 uvicorn==0.15.0
+virtualenv==20.29.2
 yarl==1.17.1
-httpx==0.27.0
-
